--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -2,10 +2,6 @@
  * style.css
 \*-----------------------------------*/
 
-/**
- * copyright 2022 codewithsadee
- */
-
 /*-----------------------------------*\
  * #CUSTOM PROPERTY
 \*-----------------------------------*/
@@ -71,6 +67,7 @@ body.dark_theme {
   --color-secondary: hsl(0, 0%, 62%);
   --card-shadow: hsla(0, 0%, 0%, 0.4);
   --input-bg: hsl(0, 0%, 16%);
+  --about-h2: hsl(2, 87%, 62%);
 
   --shadow-1: 10px 10px 40px var(--card-shadow);
 }
@@ -82,6 +79,7 @@ body.light_theme {
   --color-secondary: hsl(0, 0%, 37%);
   --card-shadow: hsla(0, 0%, 0%, 0.1);
   --input-bg: hsl(0, 0%, 93%);
+  --about-h2: hsl(0, 0%, 37%);
 
   --shadow-1: 10px 10px 40px var(--card-shadow);
 }
@@ -262,6 +260,52 @@ body.active {
   color: var(--color-secondary);
   line-height: 1.8;
   margin-bottom: 30px;
+}
+
+.section-text h2 {
+  font-size: 32px;
+  color: var(--about-h2);
+  font-weight: bold;
+}
+
+.section-text h3 {
+  font-size: 20px;
+  color: var(--about-h2);
+  font-weight: bold;
+}
+
+.career {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+
+.career li {
+  list-style: inside;
+}
+.education {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+.education li {
+  list-style: inside;
+}
+.certificate {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+.certificate li {
+  list-style: inside;
+}
+.other {
+  display: flex;
+  flex-direction: column;
+  text-align: start;
+}
+.other li {
+  list-style: inside;
 }
 
 .tooltip {
