Feat: festival setting & Design: toggle button

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -416,42 +416,13 @@ body.active {
 
 .nav-toggle-btn {
   position: relative;
-  transform: rotate(-55deg);
+  transform: rotate(0deg);
   transition: var(--transition-1);
   z-index: 2;
 }
 
 .nav-toggle-btn.active {
-  transform: rotate(-45deg);
-}
-
-.nav-toggle-btn span {
-  width: 20px;
-  height: 2px;
-  background: var(--color-primary);
-  margin: 5px;
-  transition: var(--transition-1);
-}
-
-.nav-toggle-btn :is(.one, .three) {
-  width: 10px;
-}
-
-.nav-toggle-btn .one {
-  margin-left: auto;
-  transform-origin: left;
-}
-
-.nav-toggle-btn .three {
-  transform-origin: right;
-}
-
-.nav-toggle-btn.active .one {
-  transform: rotate(90deg) translateX(-3px);
-}
-
-.nav-toggle-btn.active .three {
-  transform: rotate(90deg) translateX(3px);
+  transform: rotate(-90deg);
 }
 
 .navbar {
@@ -1497,5 +1468,22 @@ textarea.input-field {
   justify-content: space-around;
   max-width: 900px;
   width: 100%;
+  margin-bottom: 30px;
+}
+
+/* ======================================= */
+/**
+  * Festival Detail
+  */
+
+.festival-banner {
+  max-width: 600px;
+  width: 100%;
+  margin-bottom: 30px;
+}
+
+.festival-title {
+  font-size: 0px;
+  text-align: center;
   margin-bottom: 30px;
 }
