--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -596,12 +596,6 @@ main {
   padding-block: var(--section-padding);
 }
 
-.about-banner {
-  max-width: 400px;
-  margin-inline: auto;
-  margin-bottom: 80px;
-}
-
 .about .btn {
   max-width: unset;
   width: 100%;
@@ -1177,6 +1171,12 @@ textarea.input-field {
     height: 100%;
     margin-bottom: 0;
   }
+  @media (max-width: 768px) {
+    .hero-banner {
+      max-width: 100%; /* 이미지 너비를 화면에 맞게 조정 */
+      width: 100%; /* 이미지 너비를 화면에 맞게 조정 */
+    }
+  }
 
   .hero img {
     height: 100%;
@@ -1395,6 +1395,14 @@ textarea.input-field {
     max-width: 450px;
   }
 }
+
+@media (max-width: 768px) {
+  .hero-banner {
+    max-width: 100%; /* 이미지 너비를 화면에 맞게 조정 */
+    width: 100%; /* 이미지 너비를 화면에 맞게 조정 */
+  }
+}
+
 /* ======================================= */
 /**
   * 프로젝트 Detail
