[Feat] : Qrunch 생성

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1497,8 +1497,12 @@ textarea.input-field {
   margin-bottom: 30px;
 }
 
-.crush-img {
+.myList-img {
   display: flex;
   justify-items: center;
   align-items: center;
+}
+
+.myListBanner {
+  height: 350px;
 }
