--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -783,7 +783,15 @@ main {
   padding-block: var(--section-padding);
 }
 
+.project-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* 원하는 간격으로 조정하세요 */
+}
+
 .project-list > li {
+  flex: 1 1 calc(33.333% - 20px); /* 3개의 항목을 한 줄에 맞추기 위한 너비 설정 */
+  box-sizing: border-box;
   margin-bottom: 25px;
 }
 
@@ -792,6 +800,9 @@ main {
   overflow: hidden;
   border-radius: var(--radius-12);
   box-shadow: 2px 4px 6px hsla(0, 0%, 0%, 0.2);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .project-card::after {
@@ -807,12 +818,27 @@ main {
   backdrop-filter: blur(0.5px);
 }
 
+.project-card .card-banner {
+  width: 100%;
+  height: 200px; /* 원하는 높이로 설정하세요 */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.project-card .project-image {
+  width: 100%;
+  height: 100%;
+  object-fit: cover; /* 이미지의 비율을 유지하면서 크기에 맞게 자르기 */
+}
+
 .project-card .card-content {
   position: absolute;
   bottom: 0;
   left: 0;
   width: 100%;
   padding: 20px;
+  background: rgba(0, 0, 0, 0.5); /* 배경색과 투명도 조정 */
 }
 
 .project-card .card-title {
